reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__scheduler.rs_line_328_col_9_001.log

*** crates/tracewake-core/src/scheduler.rs:328:9: replace no_human::default_day_windows -> Vec<DayWindow> with vec![Default::default()]

*** mutation diff:
--- crates/tracewake-core/src/scheduler.rs
+++ replace no_human::default_day_windows -> Vec<DayWindow> with vec![Default::default()]
@@ -320,30 +320,17 @@
                 start_event_id: error.start_event_id,
                 first_terminal_event_id: error.first_terminal_event_id,
                 duplicate_terminal_event_id: error.duplicate_terminal_event_id,
             }
         }
     }
 
     pub fn default_day_windows(start_tick: SimTick) -> Vec<DayWindow> {
-        [
-            ("pre_dawn", 0, 3),
-            ("morning", 4, 9),
-            ("work_window", 10, 17),
-            ("evening", 18, 23),
-            ("night", 24, 32),
-        ]
-        .into_iter()
-        .map(|(window_id, start_offset, end_offset)| DayWindow {
-            window_id: window_id.to_string(),
-            start_tick: start_tick.advance_by(start_offset),
-            end_tick: start_tick.advance_by(end_offset),
-        })
-        .collect()
+        vec![Default::default()] /* ~ changed by cargo-mutants ~ */
     }
 
     pub fn run_no_human_day(
         state: &mut PhysicalState,
         agent_state: &mut AgentState,
         log: &mut EventLog,
         registry: &ActionRegistry,
         content_manifest_id: ContentManifestId,


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/scheduler.rs` has changed (1781904913.131922666s, 4s after last build at 1781904909.403922680s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `DayWindow: Default` is not satisfied
   --> crates/tracewake-core/src/scheduler.rs:328:14
    |
328 |         vec![Default::default()] /* ~ changed by cargo-mutants ~ */
    |              ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `DayWindow`
    |
help: consider annotating `DayWindow` with `#[derive(Default)]`
    |
268 +     #[derive(Default)]
269 |     pub struct DayWindow {
    |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `scheduler::no_human::DayWindow: Default` is not satisfied
   --> crates/tracewake-core/src/scheduler.rs:328:14
    |
328 |         vec![Default::default()] /* ~ changed by cargo-mutants ~ */
    |              ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `scheduler::no_human::DayWindow`
    |
help: consider annotating `scheduler::no_human::DayWindow` with `#[derive(Default)]`
    |
268 +     #[derive(Default)]
269 |     pub struct DayWindow {
    |

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
